# tk-goodies-svn

trunk/: LICENSE  Makefile.in  README  TODO  configure  configure.in
trunk/dialogs/: dialogs.man  dialogs.n  dialogs.tcl  pkgIndex.tcl
trunk/icons/: icons.man  icons.n  icons.tcl  icons.xml  pkgIndex.tcl
trunk/icons/Tango/: index.theme
trunk/tclconfig/: tcl.m4
